--- a/miniChallenge/Base.lproj/Main.storyboard
+++ b/miniChallenge/Base.lproj/Main.storyboard
@@ -99,7 +99,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Sef-B9-Vt5">
                                 <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <color key="backgroundColor" red="0.047058823530000002" green="0.2274509804" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6T7-JU-g96">
                                     <size key="itemSize" width="220" height="310"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -131,10 +131,10 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWT-At-h9Y">
-                                <rect key="frame" x="0.0" y="20" width="667" height="0.0"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHARACTER SELECTION" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWT-At-h9Y">
+                                <rect key="frame" x="122" y="20" width="423" height="20.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                                <color key="textColor" red="0.53725490196078429" green="0.85490196078431369" blue="0.93725490196078431" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmZ-MY-1VV">
@@ -145,7 +145,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.047058823529411764" green="0.22745098039215686" blue="0.33725490196078434" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="ABP-lL-3vP" firstAttribute="top" secondItem="mmZ-MY-1VV" secondAttribute="bottom" id="0fo-xR-1sR"/>
                             <constraint firstItem="Sef-B9-Vt5" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" id="Bdx-hO-29w"/>
@@ -153,10 +153,12 @@
                             <constraint firstItem="wWT-At-h9Y" firstAttribute="top" secondItem="QqT-lK-VvH" secondAttribute="bottom" id="IEh-nN-iZP"/>
                             <constraint firstAttribute="trailing" secondItem="wWT-At-h9Y" secondAttribute="trailing" id="Lg6-sc-PLh"/>
                             <constraint firstItem="wWT-At-h9Y" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" id="NgA-XL-oow"/>
+                            <constraint firstItem="wWT-At-h9Y" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" constant="122" id="RdJ-IW-0AE"/>
                             <constraint firstItem="Sef-B9-Vt5" firstAttribute="top" secondItem="CC1-ww-zhD" secondAttribute="top" id="XYb-Wl-kAY"/>
                             <constraint firstItem="mmZ-MY-1VV" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" id="qwQ-gp-Vg7"/>
                             <constraint firstAttribute="trailing" secondItem="mmZ-MY-1VV" secondAttribute="trailing" id="tMp-DB-WKQ"/>
                             <constraint firstItem="ABP-lL-3vP" firstAttribute="top" secondItem="Sef-B9-Vt5" secondAttribute="bottom" id="whb-cr-pii"/>
+                            <constraint firstAttribute="trailing" secondItem="wWT-At-h9Y" secondAttribute="trailing" constant="121.8" id="ybB-6t-qRr"/>
                         </constraints>
                     </view>
                     <connections>
