--- a/miniChallenge/Base.lproj/Main.storyboard
+++ b/miniChallenge/Base.lproj/Main.storyboard
@@ -99,7 +99,7 @@
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Sef-B9-Vt5">
                                 <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
-                                <color key="backgroundColor" red="0.047058823530000002" green="0.2274509804" blue="0.33725490200000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.05116657167673111" green="0.22536250948905945" blue="0.33759492635726929" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="6T7-JU-g96">
                                     <size key="itemSize" width="220" height="310"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -131,39 +131,36 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CHARACTER SELECTION" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wWT-At-h9Y">
-                                <rect key="frame" x="122" y="20" width="423" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="0.53725490196078429" green="0.85490196078431369" blue="0.93725490196078431" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmZ-MY-1VV">
-                                <rect key="frame" x="0.0" y="345" width="667" height="30"/>
-                                <state key="normal" title="Button"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mmZ-MY-1VV">
+                                <rect key="frame" x="242.5" y="306" width="182" height="49"/>
+                                <state key="normal" image="fill2"/>
                                 <connections>
                                     <segue destination="KhV-QB-1mz" kind="show" id="8Rj-sE-V4e"/>
                                 </connections>
                             </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="characterSelection" translatesAutoresizingMaskIntoConstraints="NO" id="vVf-Xg-fXT">
+                                <rect key="frame" x="122" y="19" width="423" height="43"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="43" id="Z8c-xQ-eUp"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.047058823529411764" green="0.22745098039215686" blue="0.33725490196078434" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="ABP-lL-3vP" firstAttribute="top" secondItem="mmZ-MY-1VV" secondAttribute="bottom" id="0fo-xR-1sR"/>
+                            <constraint firstItem="mmZ-MY-1VV" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" constant="242.69999999999999" id="8B9-hj-iAS"/>
                             <constraint firstItem="Sef-B9-Vt5" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" id="Bdx-hO-29w"/>
                             <constraint firstAttribute="trailing" secondItem="Sef-B9-Vt5" secondAttribute="trailing" id="Bgh-gc-4Hj"/>
-                            <constraint firstItem="wWT-At-h9Y" firstAttribute="top" secondItem="QqT-lK-VvH" secondAttribute="bottom" id="IEh-nN-iZP"/>
-                            <constraint firstAttribute="trailing" secondItem="wWT-At-h9Y" secondAttribute="trailing" id="Lg6-sc-PLh"/>
-                            <constraint firstItem="wWT-At-h9Y" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" id="NgA-XL-oow"/>
-                            <constraint firstItem="wWT-At-h9Y" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" constant="122" id="RdJ-IW-0AE"/>
+                            <constraint firstAttribute="trailing" secondItem="vVf-Xg-fXT" secondAttribute="trailing" constant="122" id="FEL-f4-UmO"/>
                             <constraint firstItem="Sef-B9-Vt5" firstAttribute="top" secondItem="CC1-ww-zhD" secondAttribute="top" id="XYb-Wl-kAY"/>
-                            <constraint firstItem="mmZ-MY-1VV" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" id="qwQ-gp-Vg7"/>
-                            <constraint firstAttribute="trailing" secondItem="mmZ-MY-1VV" secondAttribute="trailing" id="tMp-DB-WKQ"/>
+                            <constraint firstItem="vVf-Xg-fXT" firstAttribute="leading" secondItem="CC1-ww-zhD" secondAttribute="leading" constant="122" id="bh1-Hu-PKV"/>
+                            <constraint firstItem="ABP-lL-3vP" firstAttribute="top" secondItem="mmZ-MY-1VV" secondAttribute="bottom" constant="20.199999999999999" id="hQ1-7q-3wT"/>
                             <constraint firstItem="ABP-lL-3vP" firstAttribute="top" secondItem="Sef-B9-Vt5" secondAttribute="bottom" id="whb-cr-pii"/>
-                            <constraint firstAttribute="trailing" secondItem="wWT-At-h9Y" secondAttribute="trailing" constant="121.8" id="ybB-6t-qRr"/>
+                            <constraint firstItem="vVf-Xg-fXT" firstAttribute="top" secondItem="CC1-ww-zhD" secondAttribute="top" constant="19" id="xfp-FO-Rse"/>
+                            <constraint firstAttribute="trailing" secondItem="mmZ-MY-1VV" secondAttribute="trailing" constant="242.69999999999999" id="xkU-0J-TOo"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="charCollectionView" destination="Sef-B9-Vt5" id="TUC-Wr-MR3"/>
-                        <outlet property="charNameLabel" destination="wWT-At-h9Y" id="bjG-VZ-YQy"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pdi-U4-CmC" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -207,4 +204,8 @@
             <point key="canvasLocation" x="-164" y="137"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="characterSelection" width="423" height="43"/>
+        <image name="fill2" width="182" height="49"/>
+    </resources>
 </document>
